@@ -3,7 +3,6 @@ package com.graduationproject.realestate.response;
 import com.graduationproject.realestate.entities.City;
 import lombok.Data;
 import org.springframework.stereotype.Component;
-
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -11,11 +10,14 @@ import java.util.stream.Collectors;
 @Data
 public class CityResponseConverter {
 
-    public CityResponse from(City from){
-        return new CityResponse(from.getCityName(),from.getDistrict());
+    public CityResponse from(City city){
+        return CityResponse.builder()
+                .cityName(city.getCityName())
+                .district(city.getDistrict())
+                .build();
     }
     public List<CityResponse> fromList(List<City> fromList){
-        return fromList.stream().map(city -> new CityResponse(city.getCityName(),city.getDistrict())).collect(Collectors.toList());
+        return fromList.stream().map(city -> new CityResponse(city.getCityName(),city.getDistrict())).toList();
     }
 
 }
